--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
   background-position: center;
 }
 
-.slick-slide > div {
+/* .slick-slide > div {
   margin: 0 10px;
-}
+} */
 
 /* * {
   margin: 0;
